# minio_task

./: .env  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  task.sql
apps/: admin.py  models.py  views.py
django_minio/: asgi.py  settings.py  urls.py  wsgi.py
minio/.minio.sys/: format.json
minio/.minio.sys/tmp/.trash/: 9fcb055b-fae8-4a39-9904-637d472c6236
